# complexplorer

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  IMPROVEMENT_PLAN.md  LICENSE  MIGRATION_GUIDE.md  PR_DESCRIPTION.md  README.md  STL_CONSOLIDATION_SUMMARY.md  pyproject.toml  pytest.ini  stl_generation_plan_final.md  stl_healing_plan.md  stl_mesh_healing_unified_plan.md
.legacy_backup/complexplorer_legacy/: funcs.py  plots_2d.py  plots_3d.py  plots_3d_pyvista.py
.legacy_backup/complexplorer_legacy/stl_export/: stl_utils.py
.legacy_backup/tests_legacy/: test_cmap.py  test_cmap_autoscale.py
complexplorer/: __init__.py  _version.py  api.py  cmap.py  domain.py  funcs.py  mesh_utils.py  plots_2d.py  plots_3d.py  plots_3d_pyvista.py  utils.py
complexplorer/core/: __init__.py  colormap.py  domain.py  functions.py  scaling.py
complexplorer/export/: __init__.py  base.py
complexplorer/export/stl/: README.md  __init__.py  mesh_repair.py  ornament_generator.py  utils.py
complexplorer/legacy/: cmap.py
complexplorer/plotting/: __init__.py  base.py
complexplorer/plotting/matplotlib/: __init__.py  plot_2d.py  plot_3d.py
complexplorer/plotting/pyvista/: __init__.py  plot_3d.py  riemann.py  utils.py
complexplorer/stl_export/: __init__.py  mesh_healing.py  mesh_utils.py  ornament_generator.py  spherical_healing.py  stl_utils.py
complexplorer/utils/: __init__.py  backend.py  mesh.py  mesh_distortion.py  validation.py
docs/: README.md  codebase_analysis_2024.md  composite_domain_viewing_window_fix.md  documentation_improvement_plan.md  icosphere_technical_spec.md  implementation_progress_checklist.md  markdown_cleanup_plan.md  phase_7_physical_texture_plan.md  pyvista_usage_guide.md  stl_export_guide.md  stl_ornament_generation_plan.md  technical_reference.md
docs/archive/: cleanup_summary.md  codebase_improvement_plan.md  detailed_implementation_plan.md  implementation_progress_checklist.md  migration_notes.md  modulus_scaling_analysis.md  phase_7_examples_plan.md  pyvista_implementation_plan.md
docs/gallery/: README.md
examples/: README.md  README_interactive_demo.md  advanced_features.ipynb  api_cookbook.ipynb  domains_and_colormaps_tutorial.ipynb  domains_cmaps_example.ipynb  generate_gallery.py  getting_started.ipynb  interactive_demo.py  interactive_showcase.py  modulus_scaling_showcase.py  plot_example.ipynb  plots_example.ipynb  plotting_tutorial.ipynb  pyvista_basics_tutorial.ipynb  pyvista_complex_demo.ipynb  riemann_sphere_demo.ipynb  stl_demo.py  stl_export_demo.ipynb  stl_ornament_demo.ipynb
examples/archive/: autoscale_demo.py  domains_and_colormaps_tutorial.ipynb  generate_additional_examples.py  inspect_stl.py  pyvista_jupyter_popup_fixed.ipynb  riemann_sphere_demo.ipynb
examples/gallery/: README_scripts.md  generate_gallery_images.py
gallery_output/: gallery.json  index.html
gallery_output/snippets/: 3d_landscape.py  basic_phase_portrait.py  branch_cut.py  conformal_chessboard.py  domain_codomain_pair.py  domain_composition.py  enhanced_phase_portrait.py  essential_singularity.py  high_resolution_riemann_sphere.py  logarithmic_rings.py  modulus_scaled_sphere.py  polar_chessboard.py  riemann_sphere.py
scripts/: fix_legacy_imports.py  fix_test_imports.py
tests/: README.md  conftest.py  test_cleanup_summary.md  test_requirements.txt
tests/fixtures/: test_functions.py
tests/integration/: __init__.py  test_basic_workflows.py  test_end_to_end.py
tests/legacy/: test_funcs.py  test_mesh_utils.py  test_plots_3d_pyvista.py
tests/unit/: test_cmap.py  test_cmap_autoscale.py  test_domain.py  test_funcs.py  test_mesh_utils.py  test_plots_2d.py  test_plots_3d.py  test_plots_3d_pyvista.py
tests/unit/core/: test_colormap.py  test_core_domain.py  test_core_functions.py  test_scaling.py
tests/unit/export/: __init__.py  test_base_export.py
tests/unit/export/stl/: __init__.py  test_ornament_generator.py  test_utils.py
tests/unit/plotting/: __init__.py  test_base_plotting.py
tests/unit/plotting/matplotlib/: __init__.py  test_plot_2d.py  test_plot_3d.py  test_plot_3d_modulus.py
tests/unit/utils/: test_mesh.py  test_validation.py
(+3 files in other folders)
