[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["complexplorer"]
exclude = ["examples*", "tests*"]

[project]
name = "complexplorer"
version = "0.1.2"
authors = [
  { name="Igor Kuvychko", email="igor.kuvychko@gmail.com" },
]
description = "Complex function visualizations inspired by Elias Wegert's 'Visual Complex Functions - An Introduction with Phase Portraits'"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.6",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-timeout>=2.1.0",
]
pyvista = [
    "pyvista>=0.38.0",
]
all = [
    "complexplorer[dev,pyvista]",
]

[project.urls]
"Homepage" = "https://github.com/kuvychko/complexplorer"
"Bug Tracker" = "https://github.com/kuvychko/complexplorer/issues"
